# protfetch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
protfetch/: __init__.py  fetcher.py  main.py  processor.py  utils.py
tests/: conftest.py  test_fetcher.py  test_processor.py  test_utils.py
