[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protfetch"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # Please update this
]
description = "A tool to fetch and process protein FASTA sequences and metadata from NCBI based on a gene list."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython >= 1.79", # For Entrez and SeqIO
    "rapidfuzz >= 3.0.0", # For Levenshtein distance, make it a core dependency
    "requests >= 2.25.0", # Biopython's Entrez uses this, or for direct calls if needed
    "tqdm >= 4.60.0",      # For progress bars
]

[project.urls]
Homepage = "https://github.com/yourusername/protfetch" # Please update this
Repository = "https://github.com/yourusername/protfetch" # Please update this

[project.scripts]
protfetch = "protfetch.main:cli_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["protfetch*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "tests",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

